// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box should handle functional css prop 1`] = `
.c0 {
  color: red;
}

<div>
  <div
    class="c0"
  />
  <div />
</div>
`;

exports[`Box should match snapshot 1`] = `
<div>
  <div
    class=""
  />
  <div />
</div>
`;
